--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -3,6 +3,7 @@
 	<dimen name="card_arrow_height">6dp</dimen>
 	<dimen name="card_arrow_width">10.3dp</dimen>
 	<dimen name="card_arrow_y">14.3dp</dimen>
+	<item name="card_border_width" format="float" type="dimen">2</item>
 	<item name="card_corner_radius" format="float" type="dimen">17</item>
 	<dimen name="card_image_padding_left">6.6dp</dimen>
 	<dimen name="card_image_padding_right">1dp</dimen>
