--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools">
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<include layout="@layout/card_portrait" />
 
@@ -15,20 +14,7 @@
 		android:minHeight="@dimen/card_minHeight"
 		android:orientation="vertical">
 
-		<TextView
-			android:id="@+id/text"
-			android:layout_width="match_parent"
-			android:layout_height="0dp"
-			android:layout_weight="1"
-			android:fontFamily="sans-serif-light"
-			android:paddingBottom="@dimen/card_padding_bottom"
-			android:paddingLeft="@dimen/card_padding_left"
-			android:paddingRight="@dimen/card_padding_right"
-			android:paddingTop="@dimen/card_padding_top"
-			android:lineSpacingMultiplier="@dimen/card_text_line_spacing_multiplier"
-			android:textColor="@color/card_text"
-			android:textSize="@dimen/card_text_size"
-			tools:text="Hello world! This is a sample notification!" />
+		<include layout="@layout/card_text" />
 
 		<TextView
 			android:id="@+id/link"
