--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -3,7 +3,7 @@
 
 	<include layout="@layout/card_portrait" />
 
-	<LinearLayout
+	<FrameLayout
 		android:id="@+id/card"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
@@ -11,44 +11,49 @@
 		android:layout_marginLeft="@dimen/card_margin_left"
 		android:layout_marginTop="@dimen/card_margin_top"
 		android:layout_weight="1"
-		android:minHeight="@dimen/card_minHeight"
-		android:orientation="vertical">
+		android:minHeight="@dimen/card_minHeight">
 
-		<include layout="@layout/card_text" />
-
-		<TextView
-			android:id="@+id/link"
+		<LinearLayout
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:paddingLeft="@dimen/card_padding_left"
-			android:paddingRight="@dimen/card_padding_right"
-			android:fontFamily="sans-serif-light"
-			android:ellipsize="end"
-			android:singleLine="true"
-			android:textColor="@color/type_link_background"
-			android:visibility="gone" />
+			android:orientation="vertical">
 
-		<ImageView
-			android:id="@+id/image"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:scaleType="fitStart"
-			android:adjustViewBounds="true"
-			android:paddingTop="@dimen/card_image_padding_top"
-			android:paddingBottom="@dimen/card_image_padding_top"
-			android:paddingLeft="@dimen/card_image_padding_left"
-			android:paddingRight="@dimen/card_image_padding_right"
-			android:visibility="gone" />
+			<include layout="@layout/card_text" />
 
-		<RadioGroup
-			android:id="@+id/polls"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:paddingLeft="@dimen/card_padding_left"
-			android:paddingTop="@dimen/radio_group_padding_top"
-			android:orientation="vertical"
-			android:visibility="gone" />
+			<TextView
+				android:id="@+id/link"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:paddingLeft="@dimen/card_padding_left"
+				android:paddingRight="@dimen/card_padding_right"
+				android:fontFamily="sans-serif-light"
+				android:ellipsize="end"
+				android:singleLine="true"
+				android:textColor="@color/type_link_background"
+				android:visibility="gone" />
 
-		<include layout="@layout/card_timestamp" />
-	</LinearLayout>
+			<ImageView
+				android:id="@+id/image"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:scaleType="fitStart"
+				android:adjustViewBounds="true"
+				android:paddingTop="@dimen/card_image_padding_top"
+				android:paddingBottom="@dimen/card_image_padding_top"
+				android:paddingLeft="@dimen/card_image_padding_left"
+				android:paddingRight="@dimen/card_image_padding_right"
+				android:visibility="gone" />
+
+			<RadioGroup
+				android:id="@+id/polls"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:paddingLeft="@dimen/card_padding_left"
+				android:paddingTop="@dimen/radio_group_padding_top"
+				android:orientation="vertical"
+				android:visibility="gone" />
+
+			<include layout="@layout/card_timestamp" />
+		</LinearLayout>
+	</FrameLayout>
 </merge>
