--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -28,6 +28,10 @@
 			android:paddingRight="@dimen/card_list_padding_right"
 			android:paddingTop="@dimen/card_list_padding_top">
 
+			<com.liferay.alerts.widget.card.CardViewContainer
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content" />
+
 			<TextView
 				android:id="@+id/version"
 				android:layout_width="wrap_content"
