--- a/app/src/main/res/layout/card_type_image.xml
+++ b/app/src/main/res/layout/card_type_image.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
-	android:layout_height="wrap_content"
-	android:orientation="vertical">
+	android:layout_height="wrap_content">
 
 	<include layout="@layout/card_text" />
 
@@ -10,12 +9,16 @@
 		android:id="@+id/image"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+		android:layout_below="@+id/message"
 		android:scaleType="fitStart"
 		android:adjustViewBounds="true"
-		android:paddingTop="@dimen/card_image_padding_top"
-		android:paddingBottom="@dimen/card_image_padding_top"
+		android:paddingBottom="@dimen/card_image_padding_bottom"
 		android:paddingLeft="@dimen/card_image_padding_left"
 		android:paddingRight="@dimen/card_image_padding_right" />
 
-	<include layout="@layout/card_timestamp" />
-</LinearLayout>
+	<include layout="@layout/card_timestamp"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_alignParentBottom="true"
+		android:layout_alignParentRight="true" />
+</RelativeLayout>
