--- a/app/src/main/res/layout/card_type_image.xml
+++ b/app/src/main/res/layout/card_type_image.xml
@@ -13,8 +13,8 @@
 		android:scaleType="fitStart"
 		android:adjustViewBounds="true"
 		android:paddingBottom="@dimen/card_image_padding_bottom"
-		android:paddingLeft="@dimen/card_image_padding_left"
-		android:paddingRight="@dimen/card_image_padding_right" />
+		android:paddingRight="@dimen/card_image_padding_right"
+		android:paddingTop="@dimen/card_image_padding_bottom" />
 
 	<include layout="@layout/card_timestamp"
 		android:layout_width="wrap_content"
