--- a/app/src/main/res/layout/card_timestamp.xml
+++ b/app/src/main/res/layout/card_timestamp.xml
@@ -7,6 +7,7 @@
 	android:layout_gravity="right">
 
 	<com.liferay.alerts.widget.TextView
+		android:id="@+id/timestamp_icon"
 		android:layout_width="wrap_content"
 		android:layout_height="match_parent"
 		android:text="@string/icon_timestamp"
