--- a/app/src/main/res/drawable/timestamp_background.xml
+++ b/app/src/main/res/drawable/timestamp_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 	android:shape="rectangle">
 
-	<corners android:radius="4.3dp" />
+	<corners android:radius="@dimen/card_corner_radius_shadow" />
 
 	<gradient
 		android:angle="90"
