--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -3,7 +3,7 @@
 	<dimen name="card_arrow_height">6dp</dimen>
 	<dimen name="card_arrow_width">10.3dp</dimen>
 	<dimen name="card_arrow_y">14.3dp</dimen>
-	<item name="card_border_width" format="float" type="dimen">2</item>
+	<dimen name="card_border_width">0.6dp</dimen>
 	<dimen name="card_corner_radius">5.6dp</dimen>
 	<dimen name="card_corner_radius_image">3.3dp</dimen>
 	<dimen name="card_corner_radius_shadow">4.3dp</dimen>
